Se creó con Colab

--- a/content/es/docencia/python/ejercicios/soluciones/tipos-datos/ejercicio7.ipynb
+++ b/content/es/docencia/python/ejercicios/soluciones/tipos-datos/ejercicio7.ipynb
@@ -3,7 +3,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sYU_ZBcuIK8t"
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Arias-GRJ/Curso-python-2024/blob/main/content/es/docencia/python/ejercicios/soluciones/tipos-datos/ejercicio7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CtmVWCf0JfbQ"
       },
       "source": [
         "## Ejercicio\n",
@@ -13,49 +23,10 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "pesoKG = int(input(\"Ingrese su peso en kg: \"))\n",
-        "altura = float(input(\"Ingrese su altura: \"))\n",
-        "\n",
-        "icm = pesoKG / altura ** 2\n",
-        "print(f\"Su indice de masa corporal es: {icm:.2f}\")"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "Dup20aBkIfeX",
-        "outputId": "daff8e5a-93c8-4419-9b8c-663ff02fa1db",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese su peso en kg: 70\n",
-            "Ingrese su altura: 1.75\n",
-            "Su indice de masa corporal es: 22.86\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nrJ7XRaAIK8x"
-      },
-      "source": [
-        "## Solución"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xwjOekgRIK8x",
-        "outputId": "1c059d1e-c13e-409a-91f1-722bc941ad88"
+        "id": "w_sEIE04JfbT",
+        "outputId": "d96e8482-8f83-492f-aff5-21b23bfbb4e1"
       },
       "outputs": [
         {
@@ -70,6 +41,22 @@
         "imc = round(float(peso)/float(estatura)**2,2)\n",
         "print(\"Tu índice de masa corporal es \" + str(imc))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solucion 2\n",
+        "pesoKG = int(input(\"Ingrese su peso en kg: \"))\n",
+        "altura = float(input(\"Ingrese su altura: \"))\n",
+        "\n",
+        "icm = pesoKG / altura ** 2\n",
+        "print(f\"Su indice de masa corporal es: {icm:.2f}.\")"
+      ],
+      "metadata": {
+        "id": "E30qYOlOJ9l_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -91,7 +78,8 @@
       "version": "3.7.4-final"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
